k8s/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.vmnode.com`)
    middlewares:
    - name: chain-authelia
      namespace: default
    services:
    - name: api@internal
      kind: TraefikService
